# ecocide-game

./: Cargo.toml  shell.nix
assets/shaders/: triangle.vert
src/: engine.rs  main.rs  mesh.rs  pipeline.rs
