[package]
name = "ecocide"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { version = "0.37.0", features = ["linked", "debug"] }
ash-window = "0.10.0"
shaderc = "0.8.0"
winit = "0.26.1"
cgmath = "0.18.0"
anyhow = "1.0.58"
mint = "0.5.9"
gpu-allocator = "0.18.0"
memoffset = { version = "0.6", features = ["unstable_const"] }
tobj = "3.2.3"